@startuml
skinparam classAttributeIconSize 0
title Class Diagram – Adapter Pattern

class HotelController {
    - hotelService: HotelService
    +getHotels(lat, long, amount): List<HotelDTO>
}

class HotelService {
    - bookingClient: BookingApiClient
    +getHotels(lat, long, amount): List<HotelDTO>
}

class BookingApiClient {
    - adapter: IHotelService
    +useHotelService(lat, long, amount): List<HotelDTO>
}

interface IHotelService {
    +fetchHotels(lat, long, amount): List<HotelDTO>
}

class ExternalApiHotelAdapter {
    +fetchHotels(lat, long, amount): List<HotelDTO>
    -callExternalApi(lat, long): String
    -mapResponse(response, amount): List<HotelDTO>
}

class HotelDTO {
    -name: String
    -address: String
    -price: double
    -rating: double
}

' Relaties
HotelController --> HotelService : gebruikt
HotelService --> BookingApiClient : gebruikt
BookingApiClient --> IHotelService : gebruikt
ExternalApiHotelAdapter ..|> IHotelService : implementeert
ExternalApiHotelAdapter --> HotelDTO : maakt objecten van

@enduml